Homepage tweaks, bug squashing

--- a/source/assets/_stylesheets/components/_nav.scss
+++ b/source/assets/_stylesheets/components/_nav.scss
@@ -16,10 +16,9 @@
 
     .c-nav__item__label {
         display: block;
-        background: none;
         padding-bottom: $u__baseline;
         line-height: 1;
-    }
+    } 
 }
 
 
